remove : remove options from select tag

--- a/index.html
+++ b/index.html
@@ -21,12 +21,7 @@
                     <div class="select-box">
                         <img src="https://flagcdn.com/16x12/in.png" alt="flag">
                         <select>
-                            <option value="USD">USD</option>
-                            <option value="NPR">NPR</option>
                             <option value="INR">INR</option>
-                            <option value="USD">USD</option>
-                            <option value="PKR">PKR</option>
-                            <option value="MAD">MAD</option>
                         </select>
                     </div>
                 </div>
@@ -36,18 +31,13 @@
                     <div class="select-box">
                         <img src="https://flagcdn.com/16x12/us.png" alt="flag">
                         <select>
-                            <option value="USD">USD</option>
-                            <option value="NPR">NPR</option>
-                            <option value="INR">INR</option>
-                            <option value="USD">USD</option>
-                            <option value="PKR">PKR</option>
-                            <option value="MAD">MAD</option>
+                            <option value="USD">US</option>
                         </select>
                     </div>
                 </div>
 
                 <div class="exchange-rate">
-                    1USD = 118.19NPR
+                    1 USD = 75.00 INR
                 </div>
                 <button>Get Exchange Rate</button>
             </div>
@@ -56,6 +46,8 @@
     </div>
 
 
+    <script src="country-list.js"></script>
     <script src="app.js"></script>
+   
 </body>
 </html>
